[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["LabelSeg", "scripts"]

[project]
name = "LabelSeg"
authors = [
    {name = "Antoine Théberge", email = "antoine.theberge@usherbrooke.ca"},
]
description = "LabelSeg"
readme = "README.md"
requires-python = ">=3.10"
keywords = [""]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lightning==2.4.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "timm==1.0.8",
    "comet_ml",
    "monai==1.3.0",
    "h5py",
    "nibabel",
    "scilpy",
    'importlib-metadata; python_version<"3.10"',
]
version = "0.0.1"

[project.scripts]
labelseg_train = "scripts.labelseg_train:main"
labelseg_predict = "scripts.labelseg_predict:main"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
